<resources>
    <string name="app_name">IceCalculator</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="invalid_expresion">Invalid Expression</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="posneg">±</string>
    <string name="baner">Math is beautifull</string>
</resources>
